--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.35.2",
     "three": "^0.130.1",
     "three-orbitcontrols": "^2.110.3",
     "web-vitals": "^1.1.2"
